--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,8 @@ __pycache__/
 local_settings.py
 db.sqlite3
 db.sqlite3-journal
-media
+/media 
+#media Maukthika's addition 
 
 # If your build process includes running collectstatic, then you probably don't need or want to include staticfiles/
 # in your Git repository. Update and uncomment the following line accordingly.
@@ -143,5 +144,10 @@ dmypy.json
 
 # pytype static type analyzer
 .pytype/
+
+
+#Maukthika's additions
+/static
+
 
 # End of https://www.toptal.com/developers/gitignore/api/django
