--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
     "vscode-corda.isCordaProject": false,
-    "python.pythonPath": "venv/bin/python3"
+    "python.pythonPath": "venv/bin/python"
 }
